--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,11 @@
-.App {
-  text-align: center;
+.sign-on{
+    background-color: rgba(0, 0, 0, 0.1);
+    /*border: black solid 1px;*/
+    border-radius: 10px;
+    padding: 5rem;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+a{
+    padding: 0.8rem;
+    border-radius: 10px;
 }
