--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,30 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+#root{
+    height: 100%;
+    width: 100%;
+}
+
+.vertical-align {
+    min-height: 100%;
+    min-width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.horizontal-align {
+    min-height: 100%;
+    min-width: 100%;
+    display: flex;
+    justify-content: center;
 }
